@@ -13,7 +13,28 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 SCRIPT                        PROTOCOLO/PORTA/SERVIÇO (Daemon)
 01-openssh.sh --------------> TCP 22 (sshd)
 02-dhcp.sh -----------------> UDP 67 (dhcpd)
-03-dns.sh ------------------> TCP 53 (), TCP 953 () e UDP 53 ()
-04-dhcpdns.sh --------------> UDP 67 (dhcpd), TCP 53 (), TCP 953 () e UDP 53 ()
-05-ntp.sh ------------------> UDP 123 ()
-06-tftphpa.sh --------------> UDP 69 ()
+03-dns.sh ------------------> TCP 53 (named), TCP 53 (systemd-r), TCP 953 (named) e UDP 53 (named)
+04-dhcpdns.sh --------------> UDP 67 (dhcpd), TCP 53 (named), TCP 53 (systemd-r), TCP 953 (named) e UDP 53 (named)
+05-ntp.sh ------------------> UDP 123 (ntpd)
+06-tftphpa.sh --------------> UDP 69 (in.tftpd) e UDP 67 (dhcpd)
+07-lamp.sh -----------------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld)
+08-openssl.sh --------------> TCP 443 (apache2 HTTPS)
+09-vsftpd.sh ---------------> TCP 21 (vsftpd FTP), TCP 20 (ftp-data) e TCP 990 (vsftpd SFTP)
+10-tomcat.sh ---------------> TCP 8080 (java HTTP)
+11-wordpress.sh ------------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld)
+12-webmin.sh ---------------> TCP 10000 (miniserv HTTPS) e TCP 20000 (miniserv HTTPS)
+13-netdata.sh --------------> TCP 19999 (netdata HTTP)
+14-loganalyzer.sh ----------> TCP 80 (apache2 HTTP), TCP 3306 (mysqld), TCP 514 (rsyslogd) e UDP 514 (rsyslogd)
+15-glpi.sh -----------------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld)
+16-fusioninventory.sh ------> TCP 80 (apache2 HTTP), TCP 3306 (mysqld) e TCP 62354 (fusioninv GLPI)
+17-zoneminder.sh -----------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld)
+18-guacamole.sh ------------> TCP 8080 (java HTTP) e TCP 4822 (guacd)
+19-grafana.sh --------------> TCP 3000 (grafana-s HTTP)
+20-zabbix.sh ---------------> TCP 80 (apache2 HTTP), TCP 3306 (mysqld), TCP 10050 (zabbix_ag) e 10051 (zabbix_se)
+21-docker.sh ---------------> TCP 9000 (docker-pr HTTP)
+22-ansible.sh --------------> TCP 4440 (java HTTP)
+23-ntopng.sh ---------------> TCP 3001 (ntopng HTTP)
+24-openfire.sh -------------> TCP 9090 (java HTTP)
+25-owncloud.sh -------------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld)
+26-ocsinventory.sh ---------> TCP 80 (apache2 HTTP) e TCP 3306 (mysqld) 
+27-bacula.sh --------------->
