@@ -270,7 +270,7 @@ echo -e "Editando o arquivo de configuração rundeck-config.properties, pressio
 echo -e "Rundeck instalado com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
-echo -e "Iniciando o serviço do Rundeck, pressione <Enter> para continuar"
+echo -e "Iniciando o serviço do Rundeck, aguarde..."
 	# opção do comando: &>> (redirecionar a saida padrão)
 	systemctl enable rundeckd &>> $LOG
 	systemctl start rundeckd &>> $LOG
@@ -287,6 +287,7 @@ echo -e "Verificando a porta de conexão do Rundeck, aguarde..."
 	# network files), -P (inhibits the conversion of port numbers to port names for network files), 
 	# -i (selects the listing of files any of whose Internet address matches the address specified 
 	# in i), -s (alone directs lsof to display file size at all times)
+	nc -vz localhost 4440 &>> $LOG
 	lsof -nP -iTCP:4440 -sTCP:LISTEN
 echo -e "Porta de conexão verificada com sucesso!!!, continuando com o script...\n"
 sleep 5
