@@ -7,8 +7,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 25/11/2021
-# Data de atualização: 12/01/2022
-# Versão: 0.02
+# Data de atualização: 13/01/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do ownCloud v10.8.x
 #
@@ -236,6 +236,14 @@ echo -e "Editando o arquivo de configuração do owncloud.conf, pressione <Enter
 	read -s
 	vim /etc/apache2/sites-available/owncloud.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
+sleep 5
+#
+echo -e "Editando as configurações do PHP php.ini, pressione <Enter> para continuar"
+	# opção do comando: &>> (redirecionar a saída padrão)
+	# opção do comando read: -s (Do not echo keystrokes)
+	read -s
+	vim /etc/php/7.4/apache2/php.ini
+echo -e "Arquivo do PHP editado com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
 echo -e "Habilitando o Virtual Host do ownCloud no Apache2, aguarde..."
