@@ -37,16 +37,17 @@
 	</Directory>
 
 	# Configuração dos módulos de segurança de acesso ao GLPI Help Desk
-	<IfModule mod_rewrite.c>
-		RewriteEngine On
-		RewriteRule ^index\.php$ - [L]
-		RewriteCond $1 ^(index\.php)?$ [OR]
-		RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-		RewriteCond %{REQUEST_FILENAME} -f [OR]
-		RewriteCond %{REQUEST_FILENAME} -d
-		RewriteRule ^(.*)$ - [S=1]
-		RewriteRule . /index.php [L]
-	</IfModule>
+	# Descomentar essas linhas depois de configurar o GLPI Help Desk
+	#<IfModule mod_rewrite.c>
+	#	RewriteEngine On
+	#	RewriteRule ^index\.php$ - [L]
+	#	RewriteCond $1 ^(index\.php)?$ [OR]
+	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
+	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
+	#	RewriteCond %{REQUEST_FILENAME} -d
+	#	RewriteRule ^(.*)$ - [S=1]
+	#	RewriteRule . /index.php [L]
+	#</IfModule>
 
  	# Configuração dos arquivos de Log do GLPI Help Desk
 	ErrorLog ${APACHE_LOG_DIR}/error-glpi.log
