@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 25/11/2021
-# Data de atualização: 19/12/2021
-# Versão: 0.01
+# Data de atualização: 13/01/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent v2.9.x
 #
@@ -17,7 +17,7 @@ PerlOptions +Parent
 <Perl>
   $ENV{PLACK_ENV} = 'production';
   # Localização do binário e versão do Perl
-  $ENV{MOJO_HOME} = '/usr/local/share/perl/5.26.1';
+  $ENV{MOJO_HOME} = '/usr/local/share/perl/5.30.0';
   $ENV{MOJO_MODE} = 'deployment';
   #
   # Configuração do Banco de Dados Master (Primário)
